2011-10-16  Adam Barth  <abarth@webkit.org>

        Always disable ENABLE(ON_FIRST_TEXTAREA_FOCUS_SELECT_ALL) and delete associated code
        https://bugs.webkit.org/show_bug.cgi?id=70216

        Reviewed by Eric Seidel.

        * wtf/Platform.h:

2011-10-16  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Remove PageAllocatorSymbian.h, OSAllocatorSymbian.cpp, gtk/ThreadingGtk.cpp from gyp project files
        https://bugs.webkit.org/show_bug.cgi?id=70205

        Reviewed by James Robinson.

        wtf/PageAllocatorSymbian.h and wtf/OSAllocatorSymbian.cpp were removed in r97557.
        wtf/gtk/ThreadingGtk.cpp was removed in r97269.

        * JavaScriptCore.gypi:

2011-10-16  Adam Barth  <abarth@webkit.org>

        Always enable ENABLE(DOM_STORAGE)
        https://bugs.webkit.org/show_bug.cgi?id=70189

        Reviewed by Eric Seidel.

        * Configurations/FeatureDefines.xcconfig:

2011-10-15  Dan Horák <dan@danny.cz>

        The s390 and s390x architectures both use 64-bit double type
        that conforms to the IEEE-754 standard.

        https://bugs.webkit.org/show_bug.cgi?id=69940

        Reviewed by Gavin Barraclough.

        * wtf/dtoa/utils.h:

2011-10-14  Filip Pizlo  <fpizlo@apple.com>

        FunctionExecutable should expose the ability to create unattached FunctionCodeBlocks
        https://bugs.webkit.org/show_bug.cgi?id=70157

        Reviewed by Geoff Garen.
        
        Added FunctionExecutable::produceCodeBlockFor() and rewired compileForCallInternal()
        and compileForConstructInternal() to use this method. This required more cleanly
        exposing some of CodeBlock's tiering functionality and moving the CompilationKind
        enum to Executable.h, as this was the easiest way to make it available to the
        declarations/definitions of CodeBlock, FunctionExecutable, and BytecodeGenerator.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::copyDataFrom):